update jvm and refresh all dependencies